--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "goit-node-rest-api",
   "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.4"
   },
