--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.7",
+    "nodemailer": "^6.9.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
